<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.sinch.sdk.archetypes</groupId>
  <artifactId>sinch-java-sdk-client-snippets</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Sinch Java SDK Client Snippets</name>

  <properties>
    <sinch.sdk.java.version>[1.0.0,)</sinch.sdk.java.version>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <maven.compiler.version>3.13.0</maven.compiler.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
            <configuration>
                <compileSourceRoots>${snippet}</compileSourceRoots>
            </configuration>
      </plugin>

      <!-- code format -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>2.40.0</version>

        <configuration>

          <java>
            <includes>
              <include>**/*.java</include>
            </includes>

            <googleJavaFormat>
              <version>1.22.0</version>
              <reflowLongStrings>true</reflowLongStrings>
            </googleJavaFormat>
            <endWithNewline />
            <removeUnusedImports />
            <indent>
              <spaces>true</spaces>
              <spacesPerTab>2</spacesPerTab>
            </indent>
            <trimTrailingWhitespace />
          </java>

        </configuration>

        <executions>
          <execution>
            <phase>verify</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.sinch.sdk</groupId>
      <artifactId>sinch-sdk-java</artifactId>
      <version>${sinch.sdk.java.version}</version>
    </dependency>

  </dependencies>

</project>
